src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Rubik+Maps&display=swap');
.title{
    font-family: 'Rubik Maps', monospace;
    max-width: 250px;
    margin: auto;
    margin-top: 10px;
    color: rgb(202, 226, 246);
    position: sticky;
    text-align: center;
}
.card-holder{
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
    gap: 20px;
    margin: 5px;
    padding: 5px;
    margin-bottom: 0;
    place-items: center;
    max-height: 75vh;
    overflow-y: auto;
}
@keyframes poke-card-ani {
    0%{
        transform: translateX(-100%);
    }
}
.pokemon-card{
    background-color: rgb(42, 41, 41);
    max-width: 350px;
    min-width: 350px;
    max-height: 250px;
    min-height: 250px;
    position: relative;
    padding: 10px;
    border-radius: 16px;
    box-shadow: 2px 2px 4px 2px black;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    transition: all 0.15s ease-in;
    animation: poke-card-ani 1s ease;
}
.pokemon-card:hover{
    transform: scale(1.02);
    cursor: pointer;
}
.pokemon-types{
    display: flex;
    gap: 5px;
    animation: types-animation 0.5s ease;
}
@keyframes types-animation {
    0%{
        transform: translateY(100%);
    }
}
.pokemon-types p{
    width: 100px;
    height: 35px;
    background-color: rgba(188, 143, 188, 0.326);
    border-radius: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.pokemon-name{
    font-size: 2rem;
    margin: 0;
}
.pokemon-card source,
.pokemon-card img{
    position: absolute;
    width: 50%;
    height: 50%;
    right: 0px;
    bottom: 0px;
    animation: pokeimg-animation 1s ease 0.5;
}
@keyframes pokeimg-animation {
    0%{
        opacity: 0;
    }
}
.search-wrapper{
    position: relative;
    max-width: 200px;
    cursor: pointer;
}
.search-wrapper img{
    position: absolute;
    top: 7px;
    left: 7px;
    max-width: 20px;
}
.search{
    width: 100%;
    height: 35px;
    border: none;
    border-radius: 32px;
    padding-left: 50px;
    font-size: 1.15rem;
}
.top-bar{
    margin: 1rem 3rem;
    display: flex;
    justify-content: space-between;
    position: relative;
    flex-wrap: wrap;
    gap: 10px;
    align-items: center;
    height: 10vh;
}
.top-bar select{
    max-width: 250px;
    min-width: 250px;
    border: none;
    border-radius: 32px;
    padding: 10px;
    cursor: pointer;
}
.stat-wrapper{
    display: flex;
    gap: 5px;
    justify-content: space-between;
    align-items: center;
    animation: stat-animation 0.5s ease ;
}
@keyframes stat-animation{
    0%{
        transform: translateY(-100%);
    }
}
.stat-outer-bar{
    width: 100%;
    background-color: aliceblue;
    height: 10px;
    border-radius: 1rem;
    position: relative;
}
.stat-inner-bar{
    background-color: rgb(89, 137, 179);
    height: 10px;
    border-radius: 1rem;
}
.key-value-wrapper{
    display: flex;
    gap: 5px;
    min-width: 130px;
    justify-content: space-between;
}
::-webkit-scrollbar {
    width: 20px;
  }
  
  ::-webkit-scrollbar-track {
    background-color: transparent;
  }
  
  ::-webkit-scrollbar-thumb {
    background-color: #d6dee1;
    border-radius: 20px;
    border: 6px solid transparent;
    background-clip: content-box;
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background-color: #a8bbbf;
  }
  footer{
    display: flex;
    position: fixed;
    bottom: 0;
    gap: 10px;
    justify-content: center;
    width: 100%;
  }
a{
    color: royalblue;
    text-decoration: none;
}
a:hover{
    color: rgb(51, 51, 232);
}
@media screen and (max-width: 768px){
    .card-holder {
        -ms-overflow-style: none;
        scrollbar-width: none; 
    }
    .card-holder::-webkit-scrollbar { 
        display: none; 
    }
}

